# dfir-glossary

./: .gitignore  README.md  dfir-glossary.py  dfir-glossary.spec  glossdb.sqlite  pyproject.toml  version.txt
dfir_glossary/: dfir_glossary.py  glossary.sqlite
